<resources>
    <string name="app_name">My TDVB Application</string>
    <string name="ok">ok</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="list_last_series">Last series updated</string>
    <string name="list_no_series_recently_updated">No series updated recently</string>
    <string name="progress_dialog">Progress dialog</string>
    <string name="please_wait">Please wait</string>

    <string name="serie_detailed">Details Series</string>
    <string name="informations">Informations</string>
    <string name="actors">Actors</string>
    <string name="episodes">Episodes</string>
    <string name="genre">Genre</string>
    <string name="tdvb_score">TDVB Score</string>
    <string name="user_score">Your Score</string>

    <!-- Account -->
    <string name="account_access_infos">Below are the information related to your tdvb account</string>
    <string name="account_personal_infos">My personal informations</string>
    <string name="account_name">Username</string>
    <string name="account_language">Language</string>
    <string name="account_favoritesDisplaymode">Favorites display mode</string>
    <string name="account_deconnection">Deconnection</string>

    <!-- Menu -->
    <string name="search_tv_series">Search a tv series</string>
    <string name="last_series_updated">Last series updated</string>
    <string name="consult_favorites">Consult your favorites</string>
    <string name="consult_my_account">Consult your account</string>
    <string name="account_title">My Account</string>

    <!-- Favorites -->
    <string name="my_favorites">My favorites</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="title_unavailable_connection">Network anavailable</string>
    <string name="mess_unavailable_connection">The internet connection seems interrupted. Please check your connection and try again</string>
    <string name="btn_done">OK</string>
    <string name="btn_cancel">cancel</string>

    <string name="send_note">Send this note</string>
    <string name="title_note_tdvb">Send your note</string>
    <string name="description_note_tdvb">You are going to send your note on our server, are you sure ?</string>
    <string name="share_serie">Share this serie</string>
</resources>
