<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_background"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/informations"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/star_unchecked" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="Peaky Blinders" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginTop="15dp"
                tools:text="En 1919, à Birmingham, soldats, révolutionnaires politiques et criminels combattent pour se faire une place dans le paysage industriel de l'après-Guerre." />

        </RelativeLayout>

        <View style="@style/dividerStyle" />

        <LinearLayout
            android:id="@+id/genre_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/genre_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/genre"
                android:textSize="15sp" />


        </LinearLayout>

        <View style="@style/dividerStyle" />

        <LinearLayout
            android:id="@+id/rating_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tdvb_score"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <RatingBar
                android:id="@+id/rating"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1" />

            <TextView
                android:id="@+id/rating_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="4.9" />

        </LinearLayout>

        <View style="@style/dividerStyle" />

        <LinearLayout
            android:id="@+id/user_rating_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_score"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <RatingBar
                android:id="@+id/user_rating"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:numStars="5"
                android:stepSize="0.1" />

            <TextView
                android:id="@+id/user_rating_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="4.9" />

            <Button
                android:id="@+id/btn_send_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/send_note" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/actors_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_background"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actors"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:src="@drawable/arrow_rightt"
                android:tint="@color/dark_gray" />

        </RelativeLayout>

        <View style="@style/dividerStyle" />

        <RelativeLayout
            android:id="@+id/episodes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_background"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/episodes"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:src="@drawable/arrow_rightt"
                android:tint="@color/dark_gray" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:text="@string/share_serie"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>